# RepuNet

./: .gitignore  LICENSE  README.md  README_ZH.md  auto_run.py  prompt_interface.py  pyproject.toml  requirements.txt  start.py  test.py  test_pd_analysis.py  test_pd_cooperation.py
analysis/: analysis.py  social_network.py  statis_methods.py  statis_methods_sign.py
persona/: persona.py
persona/congnitive/: converse.py  retrive.py
persona/memory_structures/: associative_memory.py  scratch.py
persona/prompt_template/: gpt_structure.py  run_gpt_prompt.py
reputation/: gossip.py  gossip_database.py  reputation_database.py  reputation_update.py  social_network.py
reputation/prompt_template/: gpt_structure.py  run_gpt_prompt.py
scripts/: batch_run.sh  run_simulation.py
sim_storage/: change_sim_folder.py  profiles.json
task/investment/: investment.py
task/investment_without_gossip/: investment.py
task/investment_without_reputation/: investment.py
task/investment_without_reputation_without_gossip/: investment.py
task/pd_game/: pd_game.py
task/pd_game_without_gossip/: pd_game.py
task/pd_game_without_reputation/: pd_game.py
task/pd_game_without_reputation_without_gossip/: pd_game.py
task/sign_up/: sign_up.py
task/sign_up copy/: sign_up.py
task/sign_up_without_gossip/: sign_up.py
task/sign_up_without_reputation/: sign_up.py
task/sign_up_without_reputation_without_gossip/: sign_up.py
without_reputation/: gossip.py  social_network.py
without_reputation/prompt_template/: gpt_structure.py  run_gpt_prompt.py
(+17121 files in other folders)
